cm4all-beng-proxy (0.3.6) unstable; urgency=low

  * processor: ignore closing </header>
  * widget-http: now really don't check content-type in frame parents

 --

cm4all-beng-proxy (0.3.5) unstable; urgency=low

  * widget-http: don't check content-type in frame parents
  * istream-subst: allow null bytes in the input stream
  * js: added the "translate" parameter for passing values to the
    translation server
  * rewrite-uri: refuse to rewrite a frame URI without widget id

 -- Max Kellermann <mk@cm4all.com>  Mon, 05 Jan 2009 16:46:32 +0100

cm4all-beng-proxy (0.3.4) unstable; urgency=low

  * processor: added support for custom widget request headers
  * http-cache: obey the "Vary" response header
  * http-cache: pass the new http_cache_info object when testing a cache
    item

 -- Max Kellermann <mk@cm4all.com>  Tue, 30 Dec 2008 15:46:44 +0100

cm4all-beng-proxy (0.3.3) unstable; urgency=low

  * processor: grew widget parameter buffer to 512 bytes
  * widget-resolver: clear widget->resolver on abort
  * cgi: clear the input's handler in cgi_async_abort()
  * widget-stream: use istream_hold (reverts r4171)

 -- Max Kellermann <mk@cm4all.com>  Fri, 05 Dec 2008 14:43:05 +0100

cm4all-beng-proxy (0.3.2) unstable; urgency=low

  * processor: free memory before calling embed_frame_widget()
  * processor: allocate query string from the widget pool
  * processor: removed the obsolete widget attributes "tag" and "style"
  * parser: hold a reference to the pool

 -- Max Kellermann <mk@cm4all.com>  Mon, 01 Dec 2008 14:15:38 +0100

cm4all-beng-proxy (0.3.1) unstable; urgency=low

  * http-client: remove Transfer-Encoding and Content-Length from response
    headers
  * http-client: don't read body after invoke_response()
  * fork: retry splice() after EAGAIN
  * fork: don't close input when splice() fails
  * cgi: abort the response handler when the stdin stream fails
  * istream_file, istream_pipe, fork, client_socket, listener: fixed file
    descriptor leaks